[package]
name = "shvlog"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
ansi_term = "0.12"
flexi_logger = { version = "0.24.2", features = ["colors"] }
chrono = "0.4"
time = "0.3.4"
lazy_static = "1.4"
